# CPP3_BrickGame_v2.0

./: README_RUS.md
src/: CMakeLists.txt  Makefile
src/brick_game/common/: BaseModel.h  Constants.h
src/brick_game/snake/: SnakeModel.cc  SnakeModel.h
src/brick_game/tetris/: TetrisModel.cc  TetrisModel.h  Tetromino.cc  Tetromino.h
src/controller/: SnakeController.h  TetrisController.h
src/gui/console/: BrickGameConsole.cc
src/gui/console/common/: BaseView.cc  BaseView.h  BrickGameConsoleView.cc  BrickGameConsoleView.h
src/gui/console/snake/: SnakeConsoleView.cc  SnakeConsoleView.h
src/gui/console/tetris/: TetrisConsoleView.cc  TetrisConsoleView.h
src/gui/desktop/snake/: BrickGame.pro  View.cc  View.h  View.ui  View.ui.autosave  main.cc
src/tests/: snake_test.cc  tetris_test.cc
